--- a/frontend/src/components/student/ComplaintForm/ComplaintForm.css
+++ b/frontend/src/components/student/ComplaintForm/ComplaintForm.css
@@ -7,9 +7,12 @@
   }
   
   .complaint-form-heading {
-    font-size: 36px;
-    font-family: 'Courier New', Courier, monospace;
-    margin-bottom: 20px;
+    width: 90%;
+    padding: 15px;
+    font-size: 43px !important;
+    font-weight:bold ;
+    text-align: center;
+    padding-bottom: 35px;
   }
   
   .complaint-form-group {
@@ -46,12 +49,13 @@
   .complaint-form-submit:hover {
     background-color: #0056b3;
   }
-  
-  /* Responsive adjustments */
-  @media (max-width: 768px) {
-    .complaint-form-heading {
-      font-size: 28px;
-    }
+
+    @media (max-width: 768px) {
+      .complaint-form-heading {
+        font-size: 33px !important;
+        white-space: nowrap; /* Prevents text from wrapping */
+        overflow: hidden; /* Adds ellipsis if text is too long */
+  }
   
     .complaint-form-group label {
       font-size: 16px;
