--- a/frontend/src/pages/login/Login.css
+++ b/frontend/src/pages/login/Login.css
@@ -8,7 +8,7 @@ body {
     background-size: 30% auto, 40% auto; */
     background-position: bottom left, top right; /* Position of each image */
     background-attachment: fixed; /* Keeps the background image fixed while scrolling */
-    background-color: #ffffff; /* Fallback background color */
+    background-color: #cbe7ff65; /* Fallback background color */
 }
 
 .top-bar {
@@ -69,9 +69,9 @@ body {
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3), 0 -5px 10px rgba(0, 0, 0, 0.2);
     padding: 2rem;
     margin: 2rem auto;
-    max-width: 400px;
+    max-width: 350px;
     width: 100%;
-    height: 500px;
+    height: 480px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end; /* Push form content to the bottom */
